<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player_details_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activity.playerdetails.PlayerDetailsActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/player_details_img_fan_art"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorDarkGray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/player_details_title_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="16:9"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed"
            android:contentDescription="@string/player_details_img_player_fan_art" />

        <LinearLayout
            android:id="@+id/player_details_title_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/player_details_img_fan_art"
            app:layout_constraintBottom_toTopOf="@id/player_details_content_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/player_details_txt_weight_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/player_details_weight_title"
                android:textSize="14sp"
                android:gravity="center_horizontal|top"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/player_details_txt_height_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/player_details_height_title"
                android:textSize="14sp"
                android:gravity="center_horizontal|top"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/player_details_content_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/player_details_title_layout"
            app:layout_constraintBottom_toTopOf="@id/player_details_line_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/player_details_txt_weight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/textContent"
                android:textSize="24sp"
                android:gravity="center_horizontal|top"
                android:layout_weight="1"/>

            <TextView
                android:id="@+id/player_details_txt_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@color/textContent"
                android:gravity="center_horizontal|top"
                android:layout_weight="1"/>

        </LinearLayout>

        <View
            android:id="@+id/player_details_line_1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgLineSeparator"
            app:layout_constraintTop_toBottomOf="@id/player_details_content_layout"
            app:layout_constraintBottom_toTopOf="@id/player_details_txt_position"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/player_details_txt_position"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/textContent"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/player_details_line_1"
            app:layout_constraintBottom_toTopOf="@id/player_details_line_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="2dp"/>

        <View
            android:id="@+id/player_details_line_2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/bgLineSeparator"
            app:layout_constraintTop_toBottomOf="@id/player_details_txt_position"
            app:layout_constraintBottom_toTopOf="@id/player_details_txt_overview"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/player_details_txt_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/textContent"
            android:textAlignment="textStart"
            android:padding="10dp"
            app:layout_constraintTop_toBottomOf="@id/player_details_line_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="10dp"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>